<resources>
    <string name="app_name">高考智库</string>

    <string name="network_error">糟糕，被你发现数据加载失败了</string>
    <string name="loading_data">正在加载中...</string>
    <string name="json_error">数据解析出错</string>

    <string name="app_pay">高考智库支付</string>
    <string name="back">返回</string>
    <string name="sumbit">提交</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="more">更多 ></string>
    <string name="contain_emoji">暂不支持特殊字符</string>
    <string name="oprate_success">提交成功</string>
    <string name="modify_success">修改成功</string>
    <string name="camera">拍照</string>
    <string name="album">从相册选择</string>
    <string name="uploading_image">图片上传中...</string>
    <string name="upload_image_fail">图片上传失败，请重新上传</string>

    <!-- download -->
    <string name="downloading">下载中</string>
    <string name="download_fail">下载失败，请重试</string>
    <string name="new_version">有新版本啦!</string>
    <string name="install_now">立即安装</string>
    <string name="install_click">点击安装</string>
    <string name="downloading_back">后台下载中</string>
    <string name="install">安装</string>
    <string name="downloaded">下载完成</string>

    <!--login-->
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="password">密 码</string>
    <string name="forget_password_text"><u>忘记密码？</u></string>
    <string name="to_register">快速注册》</string>
    <string name="phone_hint">请输入11位手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="phone_null">请输入手机号码</string>
    <string name="phone_error">手机号码格式不正确</string>
    <string name="password_error">密码格式不正确</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="register_password">密码至少6位，大小写字母、数字</string>
    <string name="register_confirm">确认新密码</string>
    <string name="register_code">获取验证码</string>
    <string name="reamin_time">%1$ds重新获取</string>
    <string name="code_null">请输入验证码</string>
    <string name="register_code_hint">请输入短信验证码</string>
    <string name="register_protocol">同意《高考智库APP》服务协议</string>
    <string name="register_choose_protocol">请先同意《高考智库APP》服务协议</string>
    <string name="protocol_title">用户服务协议</string>
    <string name="forget">找回密码</string>
    <string name="forget_phone">请输入注册手机号</string>
    <string name="forget_password_hint">新密码，密码至少6位，大小写字母、数字</string>
    <string name="confirm_null">请输入确认新密码</string>
    <string name="password_cofirm_error">两次输入的密码不一致</string>

    <!--tabhost-->
    <string name="main_tab">首页</string>
    <string name="meng_tab">筑梦空间</string>
    <string name="my_tab">我的</string>

    <!--筑梦空间-->
    <string name="meng_title">筑梦空间</string>
    <string name="meng_share">分红项目</string>
    <string name="meng_service">会员服务</string>
    <string name="meng_service_help">服务说明</string>
    <string name="meng_service_month">解答你的疑惑,帮你顺利进入名校找捷径</string>
    <string name="meng_service_year">提供权威解决方案,国际名校升学通宝典</string>
    <string name="meng_order">订单确认</string>
    <string name="order_service_price">¥%1$s</string>
    <string name="order_pay_way">支付方式</string>
    <string name="weixin_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="order_to_pay">确认并支付</string>
    <string name="order_all">合计：</string>
    <string name="order_dou">可用%1$s爱心豆抵¥%2$s</string>
    <string name="wx_pay_fail">获取微信订单号失败</string>
    <string name="wx_not_install">微信客户端未安装，请安装后重试</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_error">支付出错</string>
    <string name="pay_cancel">支付取消</string>

    <!--我的-->
    <string name="my_title">我</string>
    <string name="my_question">我的问答</string>
    <string name="my_meng">筑梦之旅</string>
    <string name="my_order">我的订单</string>
    <string name="my_dou">我的爱心豆</string>
    <string name="userinfo_title">个人信息</string>
    <string name="userinfo_name">姓名</string>
    <string name="modify_name">修改姓名</string>
    <string name="modify_name_null">请输入姓名</string>
    <string name="modify_name_error">请输入正确的姓名</string>
    <string name="userinfo_qrcode">我的二维码</string>
    <string name="qrcode_invite">邀请码：%1$s</string>
    <string name="question_status_1">已解答</string>
    <string name="question_status_0">未解答</string>
    <string name="my_question_detail">问答详情</string>
    <string name="my_meng_detail">提问</string>
    <string name="my_meng_detail_hint">请输入问题</string>
    <string name="order_price">¥%1$s元</string>
    <string name="my_order_detail">订单详情</string>
    <string name="my_dou_title">爱心豆</string>
    <string name="my_dou_payment">收支明细</string>
    <string name="dou_help">使用帮助</string>
    <string name="message_title">消息</string>
    <string name="message_detail_title">消息详情</string>
    
    <!--setting-->
    <string name="setting_title">设置</string>
    <string name="setting_modify">修改密码</string>
    <string name="modify_old_hint">请输入登录密码</string>
    <string name="modify_new_hint">请输入新密码，密码至少6位，大小写字母、数字</string>
    <string name="modify_confirm_hint">确认新密码</string>
    <string name="setting_about">关于高考智库</string>
    <string name="logout">退出登录</string>
    <string name="logout_text">确定要退出登录吗？</string>
    <string name="modify_old_null">请输入原密码</string>
    <string name="modify_old_error">请输入正确格式的原密码</string>
    <string name="modify_new_null">请输入新密码</string>
    <string name="modify_new_error">请输入正确格式的新密码</string>
    <string name="modify_confirm_null">请输入确认新密码</string>
    <string name="modify_new_confirm">两次输入的新密码不一致</string>

</resources>
