<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="45dp">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/denglubeijing"/>
    <RelativeLayout
        android:id="@+id/icon_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">
        <ImageView
            android:layout_width="73dip"
            android:layout_height="73dip"
            android:layout_centerHorizontal="true"
            android:src="@drawable/denglutubiao"
            android:scaleType="centerInside"
            android:background="@drawable/white_oval_background"/>
    </RelativeLayout>
<RelativeLayout
    android:layout_below="@+id/icon_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="45dip"
    android:layout_centerInParent="true"
    android:id="@+id/relativeLayout">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/denglushoujihao"
            android:drawablePadding="10dip"
            android:text="@string/phone"
            style="@style/textStyle_4C4C4C_15"/>
        <com.android.wako.util.ClearEditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:hint="@string/phone_hint"
            android:textCursorDrawable="@null"
            style="@style/textStyle_999999_14"
            android:background="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/denglumima"
            android:drawablePadding="10dip"
            android:text="@string/password"
            style="@style/textStyle_4C4C4C_15"/>
        <com.android.wako.util.ClearEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:hint="@string/password_hint"
            android:textCursorDrawable="@null"
            style="@style/textStyle_999999_14"
            android:password="true"
            android:singleLine="true"
            android:background="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_background"/>
    <Button
        android:id="@+id/login_to_login"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_marginTop="55dip"
        android:layout_marginLeft="37.5dip"
        android:layout_marginRight="37.5dip"
        android:text="@string/login"
        style="@style/textStyle_white_18"
        android:background="@drawable/login_bg"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dip">
        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37.5dip"
            style="@style/textStyle_999999_12"
            android:text="@string/forget_password_text"/>
        <TextView
            android:id="@+id/login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="37.5dip"
            android:text="@string/to_register"
            style="@style/textStyle_999999_12"/>
    </RelativeLayout>
</LinearLayout>
</RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>