<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_main"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/entry_top"
            android:orientation="vertical">
            <com.android.wako.util.ClearEditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/shouji"
                android:drawablePadding="10dip"
                android:padding="@dimen/title_padding"
                style="@style/textStyle_999999_14"
                android:hint="@string/phone_hint"
                android:singleLine="true"
                android:inputType="phone"
                android:maxLength="11"
                android:textCursorDrawable="@null"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding"
                android:background="@color/white">
                <Button
                    android:id="@+id/register_code_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dip"
                    android:text="@string/register_code"
                    style="@style/textStyle_white_14"
                    android:layout_marginLeft="@dimen/title_padding"
                    android:padding="3dip"
                    android:gravity="center"
                    android:background="@drawable/bule_round_background"
                    android:layout_alignParentRight="true"/>
                <com.android.wako.util.ClearEditText
                    android:id="@+id/register_code"
                    android:layout_toLeftOf="@+id/register_code_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/huoquxinxi"
                    android:drawablePadding="10dip"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/register_code_hint"
                    style="@style/textStyle_999999_14"
                    android:textCursorDrawable="@null"
                    android:layout_centerVertical="true"
                    android:background="@color/white"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <com.android.wako.util.ClearEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/zhuceyedenglumima"
                android:drawablePadding="10dip"
                android:padding="@dimen/title_padding"
                style="@style/textStyle_999999_14"
                android:hint="@string/register_password"
                android:singleLine="true"
                android:password="true"
                android:textCursorDrawable="@null"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <com.android.wako.util.ClearEditText
                android:id="@+id/register_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/querenmima"
                android:drawablePadding="10dip"
                android:padding="@dimen/title_padding"
                style="@style/textStyle_999999_14"
                android:hint="@string/register_confirm"
                android:singleLine="true"
                android:password="true"
                android:textCursorDrawable="@null"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <LinearLayout
                android:id="@+id/agree_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verify1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/register_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="7dp"
                    android:paddingTop="17dp"
                    android:src="@drawable/xuanzhong" />

                <TextView
                    android:id="@+id/register_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="17dp"
                    android:text="@string/register_protocol"
                    style="@style/textStyle_999999_14" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/register_to_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/entry_height"
            android:background="@color/text_FF9211_color"
            android:gravity="center"
            android:text="@string/sumbit"
            style="@style/textStyle_white_18"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>