<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/title_main"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/entry_top"
            android:background="@color/line_background"/>
        <com.android.wako.util.ClearEditText
            android:id="@+id/modify_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:drawableLeft="@drawable/zhuceyedenglumima"
            android:drawablePadding="10dip"
            android:hint="@string/modify_old_hint"
            android:singleLine="true"
            android:password="true"
            android:textCursorDrawable="@null"
            style="@style/textStyle_999999_14"
            android:background="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/line_background"/>
            <com.android.wako.util.ClearEditText
                android:id="@+id/modify_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding"
                android:drawableLeft="@drawable/xinmima"
                android:drawablePadding="10dip"
                android:hint="@string/modify_new_hint"
                android:singleLine="true"
                android:password="true"
                android:textCursorDrawable="@null"
                style="@style/textStyle_999999_14"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <com.android.wako.util.ClearEditText
                android:id="@+id/modify_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding"
                android:drawableLeft="@drawable/querenmima"
                android:drawablePadding="10dip"
                android:hint="@string/modify_confirm_hint"
                android:singleLine="true"
                android:password="true"
                android:textCursorDrawable="@null"
                style="@style/textStyle_999999_14"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
        </LinearLayout>
        <TextView
            android:id="@+id/to_modify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/entry_height"
            android:background="@color/text_FF9211_color"
            android:gravity="center"
            android:text="@string/sumbit"
            style="@style/textStyle_white_18"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>