<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/title_main"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/entry_top"
        android:background="@color/line_background"/>
    <TextView
        android:id="@+id/setting_modify_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/title_padding"
        android:paddingRight="@dimen/title_padding"
        style="@style/textStyle_4C4C4C_15"
        android:text="@string/setting_modify"
        android:drawablePadding="10dip"
        android:drawableLeft="@drawable/shezhixiugaimima"
        android:drawableRight="@drawable/gengduo"
        android:gravity="center_vertical"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_background"/>
    <TextView
        android:id="@+id/setting_about_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/title_padding"
        android:paddingRight="@dimen/title_padding"
        style="@style/textStyle_4C4C4C_15"
        android:text="@string/setting_about"
        android:drawablePadding="10dip"
        android:drawableLeft="@drawable/guanyu"
        android:drawableRight="@drawable/gengduo"
        android:gravity="center_vertical"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_background"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="25dp"
        android:background="@color/line_background"/>
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/textStyle_4C4C4C_15"
        android:text="@string/logout"
        android:drawablePadding="10dip"
        android:gravity="center"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_background"/>
</LinearLayout>