<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_background" >

    <RelativeLayout
        android:layout_width="285dp"
        android:layout_height="256dp"
        android:layout_centerInParent="true"
        android:background="@drawable/white_face98_round_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="2"
            android:lineSpacingExtra="10dp"
            android:text="@string/new_version"
            android:textColor="#323232"
            android:textSize="17sp" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_below="@id/title"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/new_version"
                android:textColor="#323232"
                android:textSize="17sp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="120dip"
                android:layout_height="45dip"
                android:textSize="17sp"
                android:background="@drawable/white_round_background"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok"
                android:layout_width="120dip"
                android:layout_height="45dip"
                android:layout_marginLeft="15dip"
                android:textSize="17sp"
                android:background="@drawable/bule_round_background"
                android:text="@string/install_now" />
        </LinearLayout>

        <Button
            android:id="@+id/update"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bule_round_background"
            android:gravity="center"
            android:text="@string/install_now"
            android:textColor="@android:color/white"
            android:textSize="17sp" >
        </Button>
    </RelativeLayout>

</RelativeLayout>