<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_main"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/my_userinfo_view"
                android:layout_width="match_parent"
                android:layout_height="82dip"
                android:background="@drawable/beijing_03">
                <RelativeLayout
                    android:id="@+id/my_headimg_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/title_padding"
                    android:layout_centerVertical="true">
                    <ImageView
                        android:id="@+id/my_headimg_bg"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:padding="4dip"
                        android:layout_centerInParent="true"
                        android:background="@drawable/white_oval_background"/>
                    <com.android.wako.widget.CircleImageView
                        android:id="@+id/my_headimg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/touxiang"
                        android:layout_centerInParent="true" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/my_name"
                    android:layout_toRightOf="@+id/my_headimg_view"
                    android:layout_toLeftOf="@+id/my_qrcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    style="@style/textStyle_white_16"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:layout_centerVertical="true"/>
                <com.android.wako.util.RecycleImageView
                    android:id="@+id/my_qrcode"
                    android:layout_toLeftOf="@+id/my_right"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/title_padding"
                    android:layout_marginRight="@dimen/title_padding"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/my_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baigengduo"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="@dimen/entry_top"
                android:background="@color/line_background"/>
            <TextView
                android:id="@+id/my_question_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/title_padding"
                android:gravity="center_vertical"
                android:text="@string/my_question"
                style="@style/textStyle_4C4C4C_15"
                android:drawablePadding="10dip"
                android:drawableLeft="@drawable/zhuyewen"
                android:drawableRight="@drawable/gengduo"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <TextView
                android:id="@+id/my_meng_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/title_padding"
                android:gravity="center_vertical"
                android:text="@string/my_meng"
                style="@style/textStyle_4C4C4C_15"
                android:drawablePadding="10dip"
                android:drawableLeft="@drawable/zhumeng"
                android:drawableRight="@drawable/gengduo"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <TextView
                android:id="@+id/my_order_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/title_padding"
                android:gravity="center_vertical"
                android:text="@string/my_order"
                style="@style/textStyle_4C4C4C_15"
                android:drawablePadding="10dip"
                android:drawableLeft="@drawable/dingdan"
                android:drawableRight="@drawable/gengduo"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
            <TextView
                android:id="@+id/my_dou_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/title_padding"
                android:gravity="center_vertical"
                android:text="@string/my_dou"
                style="@style/textStyle_4C4C4C_15"
                android:drawablePadding="10dip"
                android:drawableLeft="@drawable/xin"
                android:drawableRight="@drawable/gengduo"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_background"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
